<resources>
    <string name="app_name">Markit</string>
    <string name="action_donate">Donate</string>
    <string name="action_report">Report</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="vegetables">Vegetables</string>
    <string name="meats">Meats</string>
    <string name="name">Name</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ Total</string>
    <string name="reportTitle">Donations Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_PhoneNumber">Enter Phone Number</string>
    <string name="enter_Email">Enter Email</string>
    <string name="view_trader">View Trader</string>
    <string name="enter_Surname">Enter Surname</string>
    <string name="enter_Forename">Enter Forname</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Clonakilty Farmers Market App</string>
    <string name="nav_header_subtitle">management@clonmarket.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_donate">Add Trader</string>
    <string name="menu_report">Traders</string>
    <string name="menu_AboutUs">About Us</string>
    <string name="menu_Location">Location</string>
    <string name="title_activity_location">Map</string>

    <string name="button_addPlacemark">Add Placemark</string>
    <string name="button_savePlacemark">Save Placemark</string>
    <string name="button_addImage"> Add Image </string>
    <string name="hint_placemarkTitle">Placemark Title</string>
    <string name="hint_placemarkDescription">Placemark Description</string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="message_enter_title">Please enter a title</string>
    <string name="select_placemark_image">Select clonTrader image</string>

</resources>
